# web-download-agent

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/web_download_agent/: __init__.py  agents.py  cli.py  models.py  pipeline.py
