[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web-download-agent"
version = "0.1.0"
description = "Multi-agent inspired website mirror downloader MVP."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
browser = ["playwright>=1.53.0"]
llm = ["openai>=1.0.0"]

[project.scripts]
site-mirror-agent = "web_download_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
